<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="onItemCLick"
            type="android.view.View.OnClickListener" />
        <variable
            name="viewModel"
            type="com.bhaskar.test3.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/bottom_sheet_background">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/close"
            android:textColor="@color/purple_500"
            android:fontFamily="@font/plusjakartasans_bold"
            android:textSize="16sp"
            android:onClick="@{onItemCLick}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_extrabold"
            android:text="@string/filters"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/sourceCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_regular"
            android:text="@string/source"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{onItemCLick}"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sourceChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/sourceCheckBox">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBusinessToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/business_today"
                android:onClick="@{onItemCLick}"
                android:textSize="16sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/motelyFoolChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:textSize="16sp"
                android:text="@string/motley_fool"
                android:onClick="@{onItemCLick}"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/euroNewsChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/euronews"
                android:textSize="16sp"
                android:onClick="@{onItemCLick}"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/newYorkTimesChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/new_york_times"
                android:textSize="16sp"
                android:onClick="@{onItemCLick}"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/descriptionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/plusjakartasans_regular"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourceChipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/descriptionChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/descriptionCheckBox">

            <com.google.android.material.chip.Chip
                android:id="@+id/elonMaskChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/elon_musk"
                android:textSize="16sp"
                android:onClick="@{onItemCLick}"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:text="@string/washington"
                android:textSize="16sp"
                android:onClick="@{onItemCLick}"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/plusjakartasans_bold"
            android:text="@string/apply"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:onClick="@{onItemCLick}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionChipGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>